--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "ethiopian-budget-app",
   "private": true,
   "version": "0.1.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "vercel-build": "npm run build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "vercel-build": "next build",
+    "lint": "next lint",
+    "export": "next build && next export"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -31,9 +31,10 @@
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "framer-motion": "^10.17.9",
-    "react": "^18.2.0",
+    "next": "^15.3.3",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.18",
